Fixing loading data and warnings